# market-scraper

./: .gitignore  Dockerfile  README.md  mexc_futures_scraper.py  pyproject.toml  requirements.txt  run_app.sh
.github/workflows/: deploy.yaml
data/: mexc_futures.db  response.txt
src/: mexc_futures_scraper.py
